# slim

./: .dockerignore  .gitignore  .golangci.yaml  .goreleaser.yaml  .release-plz.toml  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  MAINTAINERS.md  README.md  SECURITY.md  SEMANTIC_VERSIONING.md  Taskfile.yaml  _typos.toml  buf.yaml  codecov.yml  docker-bake.hcl  rust-toolchain.toml  slim.yaml  versions.json
channel-manager/: Cargo.toml  README.md  build.rs  example-channel-manager-config.yaml
channel-manager/proto/v1/: commands.proto
channel-manager/src/: config.rs  lib.rs  service.rs  sessions.rs
crates/auth/: CHANGELOG.md  Cargo.toml
crates/auth/benches/: shared_secret_benchmark.rs
crates/auth/src/: auth_provider.rs  builder.rs  errors.rs  jwt.rs  lib.rs  mac.rs  oidc.rs  resolver.rs  shared_secret.rs  spire.rs  traits.rs  utils.rs
crates/channel-manager/: CHANGELOG.md  Cargo.toml  README.md  base-config.yaml  build.rs
crates/channel-manager/src/: config.rs  lib.rs  service.rs  sessions.rs
crates/config/: CHANGELOG.md  Cargo.toml
crates/config/crypto/: client-key.pem
crates/config/exponential-backoff/: config.yaml
crates/config/src/: auth.rs  backoff.rs  client.rs  client_display_native.rs  client_display_wasm.rs  component.rs  conn_type.rs  errors.rs  lib.rs  pqc.rs  server.rs  test_env.rs  transport_common.rs  websocket.rs
crates/config/telemetry/: server-config.yaml
crates/config/tests/: e2e.rs  wasm_client_browser_test.rs  wasm_client_test.rs
crates/config/unix/: client-config.yaml
crates/controller/: CHANGELOG.md  Cargo.toml  build.rs
crates/controller/src/: config.rs  errors.rs  service.rs
crates/datapath/: CHANGELOG.md  Cargo.toml  build.rs
crates/datapath/benches/: name_benchmark.rs  subscription_table_benchmark.rs
crates/datapath/src/: api.rs  connection.rs  errors.rs  forwarder.rs  header_mac.rs  lib.rs  link_ecdh.rs  message_processing.rs  negotiation.rs  otel_tracing.rs  runtime.rs  sync.rs  tables.rs  websocket.rs
crates/datapath/tests/: data_path_test.rs  wasm_browser_test.rs  wasm_websocket_test.rs
crates/examples/: Cargo.toml  Dockerfile.mock-agent  Taskfile.yaml  docker-compose.yml
crates/examples/config/: docker-client-config.yaml
crates/mls/: CHANGELOG.md  Cargo.toml
crates/mls/src/: errors.rs  mls.rs
crates/persistence/: CHANGELOG.md  Cargo.toml
crates/persistence/src/: cipher.rs  errors.rs  group_storage.rs  kv_store.rs  lib.rs  sqlite_backend.rs  store.rs
crates/proto/: CHANGELOG.md  Cargo.toml  build.rs
crates/proto/src/: impls.rs  lib.rs
crates/rpc/: CHANGELOG.md  Cargo.toml
crates/rpc-compiler/: CHANGELOG.md  Cargo.toml  README.md
crates/rpc-compiler/src/: common.rs  golang.rs  lib.rs  python.rs  typescript.rs
crates/rpc/src/: channel.rs  codec.rs  context.rs  error.rs  ffi.rs  handler_traits.rs  lib.rs  runtime.rs  server.rs  stream_types.rs
crates/rpc/tests/: core.rs  e2e.rs  handlers.rs  multicast.rs  slim_config_integration_test.rs
crates/service/: CHANGELOG.md  Cargo.toml
crates/service/src/: app.rs  errors.rs  lib.rs  node_config.rs  service.rs
crates/service/tests/: generic_topology_test.rs  peer_sync_test.rs  session_restore_test.rs
crates/session/: CHANGELOG.md  Cargo.toml
crates/session/benches/: header_integrity.rs
crates/session/src/: common.rs  controller_sender.rs  errors.rs  lib.rs  mls_state.rs  moderator_task.rs  persistence.rs  producer_buffer.rs  runtime.rs  session.rs  session_builder.rs  session_config.rs  session_controller.rs  session_layer.rs  session_moderator.rs  session_participant.rs  session_receiver.rs  session_sender.rs  session_settings.rs  subscription_manager.rs  test_utils.rs  timer.rs  timer_factory.rs  traits.rs  transmitter.rs
crates/signal/: CHANGELOG.md  Cargo.toml
crates/slim-bindings/: CHANGELOG.md  Cargo.toml  build.rs
crates/slim-bindings/examples/: receiver.rs  sender.rs
crates/slim-bindings/src/: app.rs  build_info.rs  client_config.rs  common_config.rs  completion_handle.rs  config.rs  errors.rs  identity_config.rs  init_config.rs  lib.rs  message_context.rs  name.rs  persistence.rs  server_config.rs  service.rs  session.rs  slim_node_config.rs  slimrpc.rs
crates/slim-bindings/tests/: slimrpc_core.rs  slimrpc_e2e.rs  slimrpc_multicast.rs
crates/slimctl/: CHANGELOG.md  Cargo.toml  build.rs
crates/slimctl/src/: cli.rs  (+5 more)
crates/testing/: CHANGELOG.md  Cargo.toml  Taskfile.yml
crates/tracing/: CHANGELOG.md  Cargo.toml
crates/web-client/: Cargo.toml  index.html
data-plane/: .clippy.toml  .release-plz.toml  Cargo.toml  Dockerfile  README.md  Taskfile.yaml  Taskfile.yml  WASM_GAP_ANALYSIS.md  WASM_SUPPORT.md  _typos.toml  deny.toml  rust-toolchain.toml  sonar-project.properties
data-plane/.cargo/: clang-ios-linker-wrapper.sh  config.toml
data-plane/.claude/: settings.local.json
data-plane/bindings/: README.md
data-plane/channel-manager/: Cargo.toml  README.md  Taskfile.yaml  base-config.yaml  build.rs  example-channel-manager-config.yaml
data-plane/control-plane/: Cargo.toml  README.md  build.rs
data-plane/core/: README.md
data-plane/docs/: ping-routing-bug-analysis.md
data-plane/examples/: Cargo.toml  Dockerfile.mock-agent  README.md  Taskfile.yaml  Taskfile.yml  docker-compose.yml
data-plane/gateway/: README.md
data-plane/mcp-proxy/: Cargo.toml  Dockerfile  Taskfile.yaml
data-plane/python/: Taskfile.yml  WINDOWS.md  pyproject.toml
data-plane/python-bindings/: CHANGELOG.md  CHANGES_FORM_v0.3.6.md  CHANGES_FROM_v0.3.6.md  Cargo.toml  README.md  Taskfile.yml  build.rs  pyproject.toml
data-plane/rust-tooling/: toolchain.yml
data-plane/slimctl/: CHANGELOG.md  Cargo.toml  build.rs
data-plane/slimrpc/: Cargo.toml  README.md  Taskfile.yaml
data-plane/slimrpc-compiler/: CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  Taskfile.yaml  buf.plugin.yaml
data-plane/srpc-compiler/: Cargo.toml  README.md
data-plane/testing/: CHANGELOG.md  Cargo.toml  Dockerfile  LOAD_TEST_EXPERIMENT.md  README.md  THROUGHPUT_EXPERIMENTS.md  Taskfile.yml  tracing.yaml
(+2494 files in other folders)
