[workspace]

members = [
    "crates/bindings/rust",
    "crates/channel-manager",
    "crates/control-plane",
    "crates/core/auth",
    "crates/core/config",
    "crates/core/controller",
    "crates/core/datapath",
    "crates/core/mls",
    "crates/core/service",
    "crates/core/session",
    "crates/core/signal",
    "crates/core/slim",
    "crates/core/tracing",
    "crates/core/version",
    "crates/examples",
    "crates/slimctl",
    "crates/slimrpc-compiler",
    "crates/testing",
]

default-members = [
    "crates/bindings/rust",
    "crates/control-plane",
    "crates/channel-manager",
    "crates/core/config",
    "crates/core/datapath",
    "crates/core/service",
    "crates/core/signal",
    "crates/core/slim",
    "crates/core/tracing",
    "crates/core/version",
    "crates/examples",
    "crates/slimctl",
    "crates/slimrpc-compiler",
    "crates/testing",
]

resolver = "2"

[workspace.dependencies]
# Local dependencies
agntcy-slim = { path = "crates/core/slim", version = "1.4.0" }
agntcy-slim-auth = { path = "crates/core/auth", version = "0.8.0" }
agntcy-slim-bindings = { path = "crates/bindings/rust", version = "1.4.0" }
agntcy-slim-config = { path = "crates/core/config", version = "0.9.3" }
agntcy-slim-controller = { path = "crates/core/controller", version = "0.6.2" }
agntcy-slim-datapath = { path = "crates/core/datapath", version = "0.13.2" }
agntcy-slim-mls = { path = "crates/core/mls", version = "0.1.18" }
agntcy-slim-service = { path = "crates/core/service", version = "0.8.15", default-features = false }
agntcy-slim-session = { path = "crates/core/session", version = "0.1.15" }
agntcy-slim-signal = { path = "crates/core/signal", version = "0.1.9" }
agntcy-slim-testing = { path = "crates/testing" }
agntcy-slim-tracing = { path = "crates/core/tracing", version = "0.3.12" }
agntcy-slim-version = { path = "crates/core/version", version = "1.4.0" }
agntcy-slimctl = { path = "crates/slimctl", version = "1.4.0" }

anyhow = "1.0.98"

arc-swap = "1"

async-stream = "0.3"
async-trait = "0.1.88"
aws-lc-rs = { version = "1.16", features = ["bindgen"] }
base64 = "0.22"
bincode = "2.0.1"
bytes = "1.9.0"
chrono = "0.4"
clap = { version = "4.5.23", features = ["derive", "env"] }

criterion = { version = "0.5", features = ["html_reports"] }
diesel = { version = "2", features = ["sqlite"] }
diesel-async = { version = "0.9", features = ["sqlite", "deadpool", "migrations"] }
diesel_migrations = { version = "2" }
display-error-chain = { version = "0.2" }
drain = { version = "0.2", features = ["retain"] }
duration-string = { version = "0.5.3", features = ["serde"] }
fastwebsockets = { version = "0.10.0", features = ["upgrade", "unstable-split"] }
futures = "0.3.31"
futures-timer = "3.0.3"
h2 = "0.4.7"
headers = "0.4.1"
hex = "0.4.3"
http = "1.2.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["http1", "server", "client"] }
hyper-rustls = { version = "0.27", features = ["http2", "aws-lc-rs"], default-features = false }
hyper-util = "0.1.10"
indexmap = "2"
indicatif = "0.17.11"
jemallocator = { version = "0.5" }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }

lazy_static = "1.5.0"
libsqlite3-sys = { version = ">=0.17.2, <0.38.0", features = ["bundled"] }
mls-rs = { version = "0.54" }
mls-rs-core = { version = "0.26" }
mls-rs-crypto-awslc = { version = "0.23" }
notify = "8.0.0"
num_cpus = "1.16"
oauth2 = { version = "5", default-features = false, features = ["reqwest"] }
once_cell = "1.21.0"
opentelemetry = { version = "0.31.0", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.31.0", features = ["metrics", "grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
opentelemetry-stdout = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = ["trace", "rt-tokio"] }
parking_lot = "0.12.3"
percent-encoding = "2.3"
pin-project = "1.1.10"
prost = "0.14"

prost-types = "0.14"

protoc-bin-vendored = "3.1.0"
pyo3 = { version = "0.26" }
pyo3-async-runtimes = { version = "0.26", features = ["tokio-runtime"] }
pyo3-stub-gen = "0.14"
rand = "0.9.0"
regex = "1.11.1"

reqwest = { version = "0.12", features = ["json", "rustls-tls-no-provider", "charset", "http2", "system-proxy", "blocking"], default-features = false }
rlimit = "0.11.0"
rustls = { version = "0.23.31" }
rustls-native-certs = "0.8"
rustls-pki-types = "1.10.0"
schemars = "1.0.3"
semver = "1"
serde = "1.0.217"
serde-pyobject = "0.7"
serde_json = "1.0"
serde_yaml = "0.9.34"
spiffe = { version = "0.12.0", features = ["x509-source", "jwt-source", "jwt-verify-aws-lc-rs"] }
tempfile = "3"
test-fork = "0.1.3"
thiserror = "2.0.9"
tokio = "1.52.2"
tokio-retry = "0.3"
tokio-rustls = "0.26.4"
tokio-stream = "0.1"
tokio-test = "0.4.4"
tokio-util = "0.7.14"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-tls = { version = "0.7", default-features = false, features = ["rustls"] }
tower = "0.5.2"
tower-http = { version = "0.6", features = ["auth"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = "0.3.19"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
trait-variant = "0.1"
twox-hash = "2.1.1"
uniffi = { version = "0.31.1", features = ["cli"] }
url = "2.5.0"
uuid = { version = "1.15.1", features = ["v4"] }

wiremock = "0.6"

[workspace.package]
version = "1.4.0"
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/agntcy/slim"

[workspace.metadata.cargo-machete]
ignored = [
    "agntcy-slim",
    "agntcy-slim-auth",
    "agntcy-slim-bindings",
    "agntcy-slim-config",
    "agntcy-slim-controller",
    "agntcy-slim-datapath",
    "agntcy-slim-mls",
    "agntcy-slim-service",
    "agntcy-slim-session",
    "agntcy-slim-signal",
    "agntcy-slim-testing",
    "agntcy-slim-tracing",
    "agntcy-slim-version",
    "agntcy-slimctl",
    "agntcy-slimrpc",
]
