[workspace]

members = [
  "crates/auth",
  "crates/channel-manager",
  "crates/config",
  "crates/control-plane",
  "crates/controller",
  "crates/datapath",
  "crates/examples",
  "crates/mls",
  "crates/proto",
  "crates/service",
  "crates/session",
  "crates/signal",
  "crates/slim",
  "crates/slimctl",
  "crates/testing",
  "crates/tracing",
  "crates/version",
]

default-members = [
  "crates/control-plane",
  "crates/channel-manager",
  "crates/config",
  "crates/datapath",
  "crates/service",
  "crates/signal",
  "crates/slim",
  "crates/tracing",
  "crates/version",
  "crates/examples",
  "crates/slimctl",
  "crates/testing",
]

resolver = "2"

[workspace.dependencies]
# Local dependencies
agntcy-slim = { path = "crates/slim", version = "2.0.0-alpha.1" }
agntcy-slim-auth = { path = "crates/auth", version = "0.10.0" }
agntcy-slim-config = { path = "crates/config", version = "0.11.0" }
agntcy-slim-controller = { path = "crates/controller", version = "0.8.0" }
agntcy-slim-datapath = { path = "crates/datapath", version = "0.15.0" }
agntcy-slim-mls = { path = "crates/mls", version = "0.2.0" }
agntcy-slim-proto = { path = "crates/proto", version = "0.1.0" }
agntcy-slim-service = { path = "crates/service", version = "0.10.0", default-features = false }
agntcy-slim-session = { path = "crates/session", version = "0.3.0" }
agntcy-slim-signal = { path = "crates/signal", version = "0.1.10" }
agntcy-slim-testing = { path = "crates/testing" }
agntcy-slim-tracing = { path = "crates/tracing", version = "0.4.0" }
agntcy-slim-version = { path = "crates/version", version = "2.0.0-alpha.1" }
agntcy-slimctl = { path = "crates/slimctl", version = "2.0.0-alpha.1" }
anyhow = "1.0.98"

arc-swap = "1.9.1"

async-stream = "0.3"
async-trait = "0.1.88"
aws-lc-rs = { version = "1.16", features = ["bindgen"] }
base64 = "0.22"
bincode = "2.0.1"
bytes = "1.9.0"
cfg-if = "1.0"
chrono = "0.4"
clap = { version = "4.5.23", features = ["derive", "env"] }

criterion = { version = "0.5", features = ["html_reports"] }
diesel = { version = "2.3.10", features = ["sqlite"] }
diesel-async = { version = "0.9", features = [
  "sqlite",
  "deadpool",
  "migrations",
] }
diesel_migrations = { version = "2" }
display-error-chain = { version = "0.2" }
drain = { version = "0.2", features = ["retain"] }
duration-string = { version = "0.5.3", features = ["serde"] }
fastwebsockets = { version = "0.10.0", features = [
  "upgrade",
  "unstable-split",
] }
futures = "0.3.31"
futures-timer = "3.0.3"

getrandom = { version = "0.3", features = ["wasm_js"] }
h2 = "0.4.7"
headers = "0.4.1"
hex = "0.4.3"
# Pure-Rust HMAC-SHA256 for the wasm32 build of SharedSecret (aws-lc-rs is
# native-only).
hmac = "0.12"
http = "1.2.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["http1", "server", "client"] }
hyper-rustls = { version = "0.27", features = [
  "http2",
  "aws-lc-rs",
], default-features = false }
hyper-util = "0.1.10"
indexmap = "2"
indicatif = "0.17.11"
jemallocator = { version = "0.5" }
js-sys = "0.3"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
k8s-openapi = { version = "0.27", default-features = false }
kube = { version = "3.1", default-features = false, features = [
  "client",
  "runtime",
  "rustls-tls",
] }

lazy_static = "1.5.0"
libsqlite3-sys = { version = ">=0.17.2, <0.38.0", features = ["bundled"] }
lru = "0.18.0"
maybe-async = "0.2.10"
mls-rs = { version = "0.54" }
mls-rs-core = { version = "0.26" }
mls-rs-crypto-awslc = { version = "0.23" }
# wasm32-only MLS crypto provider (browser SubtleCrypto, async-only).
mls-rs-crypto-webcrypto = { version = "0.14" }
notify = "8.0.0"
num_cpus = "1.16"
oauth2 = { version = "5", default-features = false, features = ["reqwest"] }
once_cell = "1.21.0"
opentelemetry = { version = "0.31.0", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.31.0", features = [
  "metrics",
  "grpc-tonic",
] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = [
  "semconv_experimental",
] }
opentelemetry-stdout = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = [
  "trace",
  "rt-tokio",
] }
parking_lot = "0.12.3"
percent-encoding = "2.3"
petgraph = "0.8"
pin-project = "1.1.10"
prost = "0.14"

prost-types = "0.14"

protoc-bin-vendored = "3.1.0"
rand = "0.9.0"
regex = "1.11.1"

reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls-no-provider",
  "charset",
  "http2",
  "system-proxy",
  "blocking",
], default-features = false }
rlimit = "0.11.0"
rstest = "0.25"
rustls = { version = "0.23.31" }
rustls-native-certs = "0.8"
rustls-pki-types = "1.10.0"
schemars = "1.0.3"
semver = "1"
serde = "1.0.217"
serde_json = "1.0"
serde_yaml = "0.9.34"
sha2 = "0.10"
smallvec = "1"
spiffe = { version = "0.12.0", features = [
  "x509-source",
  "jwt-source",
  "jwt-verify-aws-lc-rs",
] }
tempfile = "3"
test-fork = "0.1.3"
thiserror = "2.0.9"
tokio = "1.52.2"
tokio-retry = "0.3"
tokio-rustls = "0.26.4"
tokio-stream = "0.1"
tokio-test = "0.4.4"
tokio-util = "0.7.14"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-tls = { version = "0.7", default-features = false, features = ["rustls"] }
tower = "0.5.2"
tower-http = { version = "0.6", features = ["auth"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = "0.3.19"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
trait-variant = "0.1"
twox-hash = "2.1.1"
url = "2.5.0"
uuid = { version = "1.15.1", features = ["v4"] }
web-time = "1"

wiremock = "0.6"

[workspace.package]
version = "2.0.0-alpha.1"
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/agntcy/slim"

[workspace.metadata.cargo-machete]
ignored = [
  "agntcy-slim",
  "agntcy-slim-auth",
  "agntcy-slim-config",
  "agntcy-slim-controller",
  "agntcy-slim-datapath",
  "agntcy-slim-mls",
  "agntcy-slim-service",
  "agntcy-slim-session",
  "agntcy-slim-signal",
  "agntcy-slim-testing",
  "agntcy-slim-tracing",
  "agntcy-slim-version",
  "agntcy-slimctl",
]
