[package]
name = "agntcy-slim-channel-manager"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Channel Manager for SLIM - manages channels and participants via gRPC"
repository = "https://github.com/agntcy/slim"

[dependencies]
# SLIM bindings
agntcy-slim-bindings = { path = "../data-plane/bindings/rust" }

# SLIM session (for SessionError types used in disconnect detection)
agntcy-slim-session = { path = "../data-plane/core/session" }

# SLIM config (for gRPC client/server configuration with TLS, auth, keepalive, etc.)
agntcy-slim-config = { path = "../data-plane/core/config" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"

# CLI
clap = { version = "4", features = ["derive"] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Logging
agntcy-slim-tracing = { path = "../data-plane/core/tracing" }
tracing = "0.1"

# Error handling
anyhow = "1"
thiserror = "2"

# Random message IDs
rand = "0.9"

[build-dependencies]
tonic-prost-build = "0.14"

[[bin]]
name = "channel-manager"
path = "src/bin/channel_manager.rs"

[[bin]]
name = "cmctl"
path = "src/bin/cmctl.rs"
