[package]
name = "agntcy-slim-channel-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Channel Manager for SLIM - manages channels and participants via gRPC"
repository = "https://github.com/agntcy/slim"

[[bin]]
name = "channel-manager"
path = "src/bin/channel_manager.rs"

[[bin]]
name = "cmctl"
path = "src/bin/cmctl.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
agntcy-slim-auth = { workspace = true }
agntcy-slim-config = { workspace = true }
agntcy-slim-datapath = { workspace = true }
agntcy-slim-proto = { workspace = true }
agntcy-slim-service = { workspace = true, features = ["session"] }
agntcy-slim-session = { workspace = true }
agntcy-slim-signal = { workspace = true }
agntcy-slim-tracing = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
agntcy-slim = { workspace = true }
agntcy-slim-config = { workspace = true }
agntcy-slim-datapath = { workspace = true }
agntcy-slim-testing = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
