[package]
name = "agntcy-slim-config"
version = "0.12.2"
edition = { workspace = true }
license = { workspace = true }
description = "Configuration utilities"

[lib]
name = "slim_config"

[[bin]]
name = "generate-schema"
path = "src/schema/generate_schema.rs"

[dependencies]
agntcy-slim-version = { workspace = true }
cfg-if = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
agntcy-slim-auth = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
display-error-chain = { workspace = true }
drain = { workspace = true }
duration-string = { workspace = true }
fastwebsockets = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-rustls = { workspace = true }
hyper-util = { workspace = true, features = ["client-proxy-system", "service"] }
lazy_static = { workspace = true }
parking_lot = { workspace = true }
percent-encoding = { workspace = true }
prost = { workspace = true }
regex = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
rustls-pki-types = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha1 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }
tokio-rustls = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tonic-tls = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }
tracing-test = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

# Browser build: a minimal client config + gloo-net WebSocket connect. Auth,
# TLS, proxy and gRPC are intentionally excluded (the browser handles wss://
# TLS, and header/query-token auth is layered above).
[target.'cfg(target_arch = "wasm32")'.dependencies]
duration-string = { workspace = true }
gloo-net = { workspace = true }
http = { workspace = true }
percent-encoding = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "js"] }

[build-dependencies]
protoc-bin-vendored = { workspace = true }
tonic-prost-build = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
agntcy-slim-testing = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tracing-test = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
# Executes the browser WebSocket client-config unit tests under
# wasm-bindgen-test-runner (see `task test:wasm`).
wasm-bindgen-test = "0.3"
