[package]
name = "slim-examples"
version = "0.1.0"
edition = { workspace = true }
publish = false

[[bin]]
name = "sdk-mock"
path = "src/sdk-mock/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "chat"
path = "src/chat/main.rs"

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
agntcy-slim = { workspace = true }
agntcy-slim-auth = { workspace = true }
agntcy-slim-config = { workspace = true }
agntcy-slim-controller = { workspace = true }
agntcy-slim-datapath = { workspace = true }
agntcy-slim-mls = { workspace = true }
agntcy-slim-service = { workspace = true, features = ["session"] }
agntcy-slim-session = { workspace = true }
agntcy-slim-signal = { workspace = true }
agntcy-slim-testing = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
display-error-chain = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true, features = ["io-std", "io-util"] }
tracing = { workspace = true }
