# Copyright AGNTCY Contributors (https://github.com/agntcy)
# SPDX-License-Identifier: Apache-2.0

[package]
name = "agntcy-slim-proto"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Consolidated protobuf/gRPC generated code for SLIM"

[dependencies]
agntcy-slim-config = { workspace = true }
agntcy-slim-version = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
twox-hash = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { workspace = true }
tonic-prost = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["v4", "js"] }

[build-dependencies]
protoc-bin-vendored = { workspace = true }
tonic-prost-build = { workspace = true }
