[package]
name = "agntcy-protoc-slimrpc-plugin"
description = "A protoc plugin for generating slimrpc code"
version = "1.5.0"
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/agntcy/slim"

[lib]
name = "agntcy_protoc_slimrpc_plugin"
path = "src/lib.rs"

[[bin]]
name = "protoc-gen-slimrpc-python"
path = "src/bin/protoc-gen-slimrpc-python.rs"

[[bin]]
name = "protoc-gen-slimrpc-go"
path = "src/bin/protoc-gen-slimrpc-go.rs"

[[bin]]
name = "protoc-gen-slimrpc-java"
path = "src/bin/protoc-gen-slimrpc-java.rs"

[[bin]]
name = "protoc-gen-slimrpc-csharp"
path = "src/bin/protoc-gen-slimrpc-csharp.rs"

[[bin]]
name = "protoc-gen-slimrpc-kotlin"
path = "src/bin/protoc-gen-slimrpc-kotlin.rs"

[[bin]]
name = "protoc-gen-slimrpc-node"
path = "src/bin/protoc-gen-slimrpc-node.rs"

[dependencies]
anyhow = { workspace = true }
heck = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
