# Copyright AGNTCY Contributors (https://github.com/agntcy)
# SPDX-License-Identifier: Apache-2.0

[package]
name = "agntcy-slim-rpc"
edition = { workspace = true }
license = { workspace = true }
version.workspace = true
description = "SlimRPC: a gRPC-like RPC framework over SLIM (native Rust)."

[lib]
name = "slim_rpc"

[features]
default = []
uniffi = ["dep:uniffi"]

[dependencies]
agntcy-slim-auth = { workspace = true }
agntcy-slim-datapath = { workspace = true }
agntcy-slim-service = { workspace = true, features = ["session"] }
agntcy-slim-session = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
display-error-chain = { workspace = true }
drain = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
uniffi = { workspace = true, features = ["cli"], optional = true }
uuid = { workspace = true }

[dev-dependencies]
agntcy-slim-config = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing-test = { workspace = true }
